--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ fastapi-socketio==0.0.10
 filelock==3.9.0
 Flask==2.3.2
 frozenlist==1.4.0
+gunicorn==21.2.0
 h11==0.14.0
 htmx==0.0.0
 httpcore==0.17.3
