--- a/Pipfile
+++ b/Pipfile
@@ -5,15 +5,14 @@ name = "pypi"
 
 [packages]
 appdata = "==2.1.2"
-blinker = "==1.6.2"
+blinker = "==1.6.3"
 certifi = "==2022.12.7"
 charset-normalizer = "==3.2.0"
-click = "==8.1.6"
 colored = "==1.4.3"
 distlib = "==0.3.6"
 docopt = "==0.6.2"
 filelock = "==3.9.0"
-flask = "==2.3.2"
+flask = "==3.0.0"
 idna = "==3.4"
 itsdangerous = "==2.1.2"
 jinja2 = "==3.1.2"
@@ -27,17 +26,41 @@ python-dateutil = "==2.8.2"
 pytz = "==2023.3"
 requests = "==2.31.0"
 six = "==1.16.0"
-"to-requirements.txt" = "==1.3.0"
 tzdata = "==2023.3"
 urllib3 = "==2.0.4"
 virtualenv = "==20.19.0"
 virtualenv-clone = "==0.5.7"
-werkzeug = "==2.3.6"
+werkzeug = "==3.0.0"
 yarg = "==0.1.9"
-pytest = "==7.4.0"
-ebooklib = "==0.18"
+pytest = "==7.4.2"
 beautifulsoup4 = "==4.12.2"
 epub2txt = "==0.1.6"
+click = "==8.1.7"
+cachelib = "==0.10.2"
+colorama = "==0.4.6"
+coverage = "==7.3.2"
+cssutils = "==2.9.0"
+dnspython = "==2.4.2"
+email-validator = "==2.1.0.post1"
+epubcheck = "==4.2.6"
+flask-session = "==0.5.0"
+flask-wtf = "==1.2.1"
+gunicorn = "==21.2.0"
+iniconfig = "==2.0.0"
+packaging = "==23.2"
+pluggy = "==1.3.0"
+psycopg2-binary = "*"
+pytest-cov = "==4.1.0"
+pytest-watch = "==4.2.0"
+python-decouple = "==3.8"
+soupsieve = "==2.5"
+sqlalchemy = "==2.0.22"
+tablib = "==3.5.0"
+typing-extensions = "==4.8.0"
+watchdog = "==3.0.0"
+wtforms = "==3.1.0"
+xlrd = "==2.0.1"
+xlwt = "==1.3.0"
 
 [dev-packages]
 
