--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,44 @@
-absl-py==0.11.0
-aiofiles==23.2.1
-aiohttp==3.8.5
-aiosignal==1.3.1
-anyio==3.7.1
 appdata==2.1.2
-async-timeout==4.0.3
-attrs==23.1.0
 beautifulsoup4==4.12.2
-bidict==0.22.1
-blinker==1.6.2
-certifi==2022.12.7
-charset-normalizer==3.2.0
-click==8.1.6
+blinker==1.6.3
+cachelib==0.10.2
+certifi==2023.7.22
+click==8.1.7
+colorama==0.4.6
 colored==1.4.3
 coverage==7.3.2
-cssutils==2.7.1
-distlib==0.3.6
+cssutils==2.9.0
+distlib==0.3.7
+dnspython==2.4.2
 docopt==0.6.2
-EbookLib==0.17.1
-epub2txt==0.1.6
+email-validator==2.1.0.post1
 epubcheck==4.2.6
-fastapi==0.101.1
-fastapi-socketio==0.0.10
-filelock==3.9.0
-Flask==2.3.2
-frozenlist==1.4.0
+filelock==3.12.4
+Flask==3.0.0
+Flask-Session==0.5.0
+Flask-WTF==1.2.1
 gunicorn==21.2.0
-h11==0.14.0
-htmx==0.0.0
-httpcore==0.17.3
-httptools==0.6.0
-httpx==0.24.1
 idna==3.4
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-logzero==1.7.0
-lxml==4.9.3
-markdown2==2.4.10
 MarkupSafe==2.1.3
-mkinit==1.0.0
-multidict==6.0.4
-nicegui==1.3.11
-numpy==1.25.1
-orjson==3.9.5
-packaging==23.1
-pandas==2.0.3
-pipenv==2023.2.4
-pipreqs==0.4.13
-platformdirs==3.0.0
-pluggy==1.2.0
-pscript==0.7.7
-psycopg2==2.9.7
-pydantic==1.10.12
-Pygments==2.16.1
-PyQt6==6.5.2
-PyQt6-Qt6==6.5.2
-PyQt6-sip==13.5.2
-pytest==7.4.0
+packaging==23.2
+platformdirs==3.11.0
+pluggy==1.3.0
+psycopg2-binary==2.9.9
+pytest==7.4.2
 pytest-cov==4.1.0
-python-dateutil==2.8.2
+pytest-watch==4.2.0
+python-decouple==3.8
 python-dotenv==1.0.0
-python-engineio==4.6.0
-python-multipart==0.0.6
-python-socketio==5.8.0
-pytz==2023.3
-PyYAML==6.0.1
-requests==2.31.0
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.4.1
-SQLAlchemy==2.0.20
-starlette==0.27.0
+soupsieve==2.5
+SQLAlchemy==2.0.22
 tablib==3.5.0
-tqdm==4.65.1
-typing_extensions==4.7.1
-tzdata==2023.3
-ubelt==1.3.3
-urllib3==2.0.4
-uvicorn==0.22.0
-uvloop==0.17.0
-vbuild==0.8.2
-virtualenv==20.19.0
-virtualenv-clone==0.5.7
-watchfiles==0.19.0
-websockets==11.0.3
-Werkzeug==2.3.6
+typing_extensions==4.8.0
+virtualenv==20.24.5
+watchdog==3.0.0
+Werkzeug==3.0.0
+WTForms==3.1.0
 xlrd==2.0.1
 xlwt==1.3.0
-yarg==0.1.9
-yarl==1.9.2
