--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 appdata==2.1.2
 beautifulsoup4==4.12.2
 blinker==1.6.3
+boto3==1.28.73
+botocore==1.31.73
 cachelib==0.10.2
 certifi==2023.7.22
 click==8.1.7
@@ -22,6 +24,7 @@ idna==3.4
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 MarkupSafe==2.1.3
 packaging==23.2
 platformdirs==3.11.0
@@ -30,12 +33,16 @@ psycopg2-binary==2.9.9
 pytest==7.4.2
 pytest-cov==4.1.0
 pytest-watch==4.2.0
+python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.0
+s3transfer==0.7.0
+six==1.16.0
 soupsieve==2.5
 SQLAlchemy==2.0.22
 tablib==3.5.0
 typing_extensions==4.8.0
+urllib3==2.0.7
 virtualenv==20.24.5
 watchdog==3.0.0
 Werkzeug==3.0.0
