--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,9 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
+            proxy_connect_timeout 300s;
+            proxy_read_timeout 300s;
         }
-
     }
 }
