--- a/requirements.txt
+++ b/requirements.txt
@@ -41,10 +41,12 @@ six==1.16.0
 soupsieve==2.5
 SQLAlchemy==2.0.22
 tablib==3.5.0
+tinycss2==1.2.1
 typing_extensions==4.8.0
 urllib3==2.0.7
 virtualenv==20.24.5
 watchdog==3.0.0
+webencodings==0.5.1
 Werkzeug==3.0.0
 WTForms==3.1.0
 xlrd==2.0.1
