--- a/requirements.txt
+++ b/requirements.txt
@@ -33,12 +33,16 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
 MarkupSafe==2.1.3
+mirakuru==2.5.2
 mock==5.1.0
 moto==4.2.9
 packaging==23.2
 pg8000==1.30.3
 platformdirs==3.11.0
 pluggy==1.3.0
+port-for==0.7.2
+psutil==5.9.6
+psycopg==3.1.13
 psycopg2-binary==2.9.9
 pycparser==2.21
 pytest==7.4.2
@@ -46,6 +50,7 @@ pytest-cov==4.1.0
 pytest-flask==1.3.0
 pytest-mock==3.12.0
 pytest-pgsql==1.1.2
+pytest-postgresql==5.0.0
 pytest-watch==4.2.0
 python-dateutil==2.8.2
 python-decouple==3.8
@@ -55,6 +60,7 @@ requests==2.31.0
 responses==0.24.1
 s3transfer==0.7.0
 scramp==1.4.4
+setuptools==69.0.2
 six==1.16.0
 soupsieve==2.5
 SQLAlchemy==2.0.22
